# OCCT

./: .clang-format  .clangd  .git-blame-ignore-revs  .gitattributes  .gitignore  1_occt_build_step1_clean.csv  2_occt_build_step2_cycles.csv  3_occt_build_step3_victims.csv  CMakeLists.txt  CMakeLists_video_test.txt  Clangd_Configuration_Summary.md  DRAWTEST_Architecture_Framework.md  DRAWTEST_Architecture_Framework_CN.md  Dockerfile  LICENSE  README  README.md  README.txt  RELEASE_NOTES_V8_0_0_rc2.md  Windows + MSVC + Clangd 开发环境配置指南.md  azure_container_setup.md  batches.md  batches_boolean_bcommon_2d.md  batches_bugs_heal.md  batches_filling_ready.md  changelog.txt  changelog_v7_6_3_to_v7_9_2.txt  container_aware_occt.cpp  container_safe_cmake.txt  docker_signal_safety.cpp  format.patch  genconf  genconf.bat  gendoc  gendoc.bat  gendoc.sh  genproj  genproj.bat  genproj.sh  hit.md  (+12 more)
gtest/: Bugs_Regression_GTest.cxx  CMakeLists.txt  OCCT_Boolean_bcommon_2d.cxx  OCCT_Bugs_filling.cxx  OCCT_TestUtils.hxx  QABugs_20_Test.cxx  QABugs_GTest.cxx  TestDrawHelper.hxx  conversion_guide.md  test_main.cpp
gtest/tools/: collect_tests.py
samples/glfw/: CMakeLists.txt  GlfwOcctView.cpp  GlfwOcctView.h  GlfwOcctWindow.cpp  GlfwOcctWindow.h  readme.md
samples/glfw/adm/cmake/: FindOpenCASCADE.cmake
samples/mfc/occtdemo/adm/cmake/: CMakeLists.txt
samples/mfc/standard/02_Modeling/: CMakeLists.txt
samples/mfc/standard/02_Modeling/res/: Modeling.aps  Modeling.rc
samples/mfc/standard/02_Modeling/src/: ISession_Direction.cpp  ISession_Direction.h  ModelingApp.cpp  ModelingApp.h  ModelingDoc.cpp  State.h  StdAfx.h
samples/mfc/standard/03_Viewer2d/: CMakeLists.txt  README.txt
samples/mfc/standard/03_Viewer2d/res/: Viewer2d.aps  Viewer2d.rc  resource.h
samples/mfc/standard/03_Viewer2d/src/: StdAfx.cpp  StdAfx.h  Viewer2dApp.cpp  Viewer2dApp.h  Viewer2dDoc.cpp  Viewer2dDoc.h
samples/mfc/standard/04_Viewer3d/: CMakeLists.txt
samples/mfc/standard/04_Viewer3d/res/: Viewer3d.rc  resource.h  resource.hm
samples/mfc/standard/04_Viewer3d/src/: BoxRadius.cpp  BoxRadius.h  ConvertClickToPoint.cxx  DlgAttributes.cpp  DlgAttributes.h  DlgIsos.cpp  DlgIsos.h  ISession_Curve.cpp  ISession_Curve.h  ModelClippingDlg.cpp  ModelClippingDlg.h  OCCDemo_Presentation.cpp  OCCDemo_Presentation.h  OffsetDlg.cpp  OffsetDlg.h  ScaleDlg.cpp  ScaleDlg.h  ShadingModelDlg.cpp  ShadingModelDlg.h  State.h  StdAfx.cpp  StdAfx.h  TexturesExt_Presentation.cpp  TexturesExt_Presentation.h  TrihedronDlg.cpp  TrihedronDlg.h  Viewer3d.aps  Viewer3d.rc  Viewer3dApp.cpp  Viewer3dApp.h  Viewer3dDoc.cpp  Viewer3dDoc.h  Viewer3dView.cpp  Viewer3dView.h  ZClippingDlg.cpp  ZClippingDlg.h  ZCueingDlg.cpp  ZCueingDlg.h  resource.h
samples/mfc/standard/05_ImportExport/: CMakeLists.txt
samples/mfc/standard/05_ImportExport/res/: ImportExport.aps  ImportExport.rc
samples/mfc/standard/05_ImportExport/src/: ColoredShape.cpp  ColoredShape.h  ColoredShapes.cpp  ColoredShapes.h  FSD_Archive.cxx  FSD_Archive.hxx  FSD_Archive.ixx  FSD_Archive.jxx  FSD_CArchive.hxx  FSD_CFile.hxx  ImportExportApp.cpp  ImportExportApp.h  ImportExportDoc.cpp  ImportExportDoc.h  StdAfx.h
samples/mfc/standard/06_Ocaf/: CMakeLists.txt
samples/mfc/standard/06_Ocaf/res/: Ocaf.aps  Ocaf.rc  Plugin  Resources  resource.h
samples/mfc/standard/06_Ocaf/src/: DebugBrowser.hxx  Handle_OCAFSample_CommonDriver.hxx  Handle_OCAFSample_Driver.hxx  Handle_TOcafFunction_BoxDriver.hxx  Handle_TOcafFunction_CutDriver.hxx  Handle_TOcafFunction_CylDriver.hxx  Handle_TOcaf_Application.hxx  NewBoxDlg.cpp  NewBoxDlg.h  NewCylDlg.cpp  NewCylDlg.h  OCAFSample_CommonDriver.cxx  OCAFSample_CommonDriver.hxx  OCAFSample_Driver.hxx  OCAFSample_Driver.ixx  OCAFSample_Driver.jxx  OcafApp.cpp  OcafApp.h  OcafDoc.cpp  OcafDoc.h  OcafMainFrm.cpp  OcafMainFrm.h  StdAfx.cpp  StdAfx.h  TOcafFunction_BoxDriver.cxx  TOcafFunction_BoxDriver.hxx  TOcafFunction_CutDriver.cxx  TOcafFunction_CutDriver.hxx  TOcafFunction_CylDriver.cxx  TOcafFunction_CylDriver.hxx  TOcaf_Application.cxx  TOcaf_Application.hxx  TOcaf_Application.ixx  TOcaf_Application.jxx  TOcaf_Commands.cxx  TOcaf_Commands.hxx
samples/mfc/standard/07_Triangulation/: CMakeLists.txt
samples/mfc/standard/07_Triangulation/res/: RCa05792  Triangulation.aps  Triangulation.rc  resource.h
samples/mfc/standard/07_Triangulation/src/: ISession_Curve.cpp  ISession_Curve.h  OCCDemo_Presentation.cpp  OCCDemo_Presentation.h  StdAfx.cpp  StdAfx.h  Tesselate_Presentation.cpp  TriangulationApp.cpp  TriangulationApp.h  TriangulationDoc.cpp  TriangulationDoc.h
samples/mfc/standard/09_Animation/: CMakeLists.txt
samples/mfc/standard/09_Animation/res/: Animation.aps  Animation.rc  resource.h
samples/mfc/standard/09_Animation/src/: AnimationApp.cpp  AnimationApp.h  AnimationDoc.cpp  AnimationDoc.h  AnimationView3D.cpp  AnimationView3D.h  Fonc.cxx  Fonc.hxx  Sensitivity.cpp  Sensitivity.h  ShadingDialog.cpp  ShadingDialog.h  StdAfx.cpp  StdAfx.h  ThreadDialog.cpp  ThreadDialog.h  Tune.cpp  (+1 more)
samples/mfc/standard/10_Convert/: CMakeLists.txt
samples/qt/FuncDemo/: CMakeLists.txt  EXTERNLIB.cmake  FILES.cmake  FuncDemo-vc10.sln  FuncDemo-vc11.sln  FuncDemo-vc12.sln  FuncDemo.pro  PACKAGES.cmake  custom.bat  env.bat  env.sh  genproj.bat  make.sh  msvc.bat  run.bat  run.sh
samples/qt/FuncDemo/src/: BaseDriver.cpp  BaseDriver.h  CircleDriver.h  ConeDriver.h  CylinderDriver.h  FThread.cpp  FThread.h  PointDriver.cpp  PointDriver.h  PrismDriver.h  ShapeSaverDriver.cpp  ShapeSaverDriver.h  SimpleDriver.cpp  SimpleDriver.h  edge.cpp  edge.h  graphwidget.cpp  graphwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  node.cpp  node.h
samples/webgl/: CMakeLists.txt  ReadMe.md  WasmOcctPixMap.cpp  WasmOcctPixMap.h  WasmOcctView.cpp  WasmOcctView.h  WasmVKeys.h  main.cpp  occt-webgl-sample.html  occt-webgl-viewer.js
samples/xaml/: CMakeLists.txt  MainPage.xaml.cpp  MainPage.xaml.h
src/DRAWEXE/: CMakeLists.txt  DRAWEXE.cdl  DRAWEXE.cxx  DRAWEXE.html  DRAWEXE_LINK.edl  EXTERNLIB  EXTERNLIB_STATIC  FILES
src/TKService/: CMakeLists.txt  EXTERNLIB  PACKAGES
(+63889 files in other folders)
